--- a/index.html
+++ b/index.html
@@ -149,17 +149,19 @@
         </div>
 
         <div class="product-card">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/bos.jpg" alt="">
-            <img class="productImage" src="/images/2.png" alt="">
-            <div class="discount-label">-3%</div>
-          </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Olympus Lëng Multivitamin 12/1L</h5>
-            <div>
-              <span>€3.99</span>
-              <strike>5.20</strike>
+          <div id="openModalBtn">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/bos.jpg" alt="">
+              <img class="productImage" src="/images/2.png" alt="">
+              <div class="discount-label">-3%</div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Olympus Lëng Multivitamin 12/1L</h5>
+              <div>
+                <span>€3.99</span>
+                <strike>5.20</strike>
+              </div>
             </div>
           </div>
           <div class="cart-button">
@@ -173,17 +175,19 @@
         </div>
 
         <div class="product-card">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/fra.jpg" alt="">
-            <img class="productImage" src="/images/3.png" alt="">
-            <div class="discount-label">-25%</div>
-          </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Gazi BBQ Grill & Pan djath 45% yndyrë 12/100gr</h5>
-            <div>
-              <span>€2.18</span>
-              <strike>3.20</strike>
+          <div id="openModalBtn">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/fra.jpg" alt="">
+              <img class="productImage" src="/images/3.png" alt="">
+              <div class="discount-label">-25%</div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Gazi BBQ Grill & Pan djath 45% yndyrë 12/100gr</h5>
+              <div>
+                <span>€2.18</span>
+                <strike>3.20</strike>
+              </div>
             </div>
           </div>
           <div class="cart-button">
@@ -197,17 +201,19 @@
         </div>
 
         <div class="product-card">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/slo.jpg" alt="">
-            <img class="productImage" src="/images/4.png" alt="">
-            <div class="discount-label">-13%</div>
-          </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Virshlle Pule e tymosur, me djath 7/500gr</h5>
-            <div>
-              <span>€3.11</span>
-              <strike>5.20</strike>
+          <div id="openModalBtn">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/slo.jpg" alt="">
+              <img class="productImage" src="/images/4.png" alt="">
+              <div class="discount-label">-13%</div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Virshlle Pule e tymosur, me djath 7/500gr</h5>
+              <div>
+                <span>€3.11</span>
+                <strike>5.20</strike>
+              </div>
             </div>
           </div>
           <div class="cart-button">
@@ -221,17 +227,19 @@
         </div>
 
         <div class="product-card">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/ger.jpg" alt="">
-            <img class="productImage" src="/images/5.png" alt="">
-            <div class="discount-label">-52%</div>
-          </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Djathë - Double Cream 9/400g</h5>
-            <div>
-              <span>€3.21</span>
-              <strike>5.20</strike>
+          <div id="openModalBtn">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/ger.jpg" alt="">
+              <img class="productImage" src="/images/5.png" alt="">
+              <div class="discount-label">-52%</div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Djathë - Double Cream 9/400g</h5>
+              <div>
+                <span>€3.21</span>
+                <strike>5.20</strike>
+              </div>
             </div>
           </div>
           <div class="cart-button">
@@ -245,17 +253,19 @@
         </div>
 
         <div class="product-card">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/ger.jpg" alt="">
-            <img class="productImage" src="/images/6.png" alt="">
-            <div class="discount-label">-20%</div>
-          </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Majonezë 10/500ml</h5>
-            <div>
-              <span>€2.39</span>
-              <strike>4.20</strike>
+          <div id="openModalBtn">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/ger.jpg" alt="">
+              <img class="productImage" src="/images/6.png" alt="">
+              <div class="discount-label">-20%</div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Majonezë 10/500ml</h5>
+              <div>
+                <span>€2.39</span>
+                <strike>4.20</strike>
+              </div>
             </div>
           </div>
           <div class="cart-button">
@@ -348,25 +358,35 @@
 
 <!-- Modal Open and Closing Script with Transition -->
   <script>
-    const openModalBtn = document.getElementById('openModalBtn');
-    const closeModalBtn = document.getElementById('closeModalBtn');
-    const modalBackdrop = document.getElementById('modalBackdrop');
-    const modal = document.getElementById('modal');
-    const body = document.body;
+    const openModalBtns = document.querySelectorAll('#openModalBtn');
+const closeModalBtn = document.getElementById('closeModalBtn');
+const modalBackdrop = document.getElementById('modalBackdrop');
+const modal = document.getElementById('modal');
+const body = document.body;
 
-    openModalBtn.addEventListener('click', () => {
-      modalBackdrop.classList.add('show');
-      modal.classList.add('show');
-      body.style.overflow = 'hidden'; // Prevent scrolling on the body
-    });
+// Function to open modal
+function openModal() {
+  modalBackdrop.classList.add('show');
+  modal.classList.add('show');
+  body.style.overflow = 'hidden';
+}
 
-    closeModalBtn.addEventListener('click', () => {
-      modalBackdrop.classList.remove('show');
-      modal.classList.remove('show');
-      body.style.overflow = 'auto'; // Allow scrolling on the body
-    });
+// Function to close modal
+function closeModal() {
+  modalBackdrop.classList.remove('show');
+  modal.classList.remove('show');
+  body.style.overflow = 'auto';
+}
+
+// Add event listeners to open modal buttons
+openModalBtns.forEach(btn => {
+  btn.addEventListener('click', openModal);
+});
+
+// Add event listener to close modal button
+closeModalBtn.addEventListener('click', closeModal);
+
   </script>
-
   <!-- End of Modal Open and Closing Script with Transition -->
 
 
