--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="search-container">
           <input type="search" placeholder="Search Here...">
         </div>
-        <button><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
+        <button style="background-color: rgb(240, 240, 240);border-radius: 5px;"><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
       </section>
 
       <!--  Profile Store Section  -->
@@ -333,16 +333,16 @@
             <span class="footer-btn-text">Ballina</span>
         </button>
         <button class="btn-pad">
-          <span class="material-symbols-outlined footer-icon">category</span>
-            <span class="footer-btn-text">Kategorit</span>
+          <span class="material-symbols-outlined footer-icon">inventory</span>
+            <span class="footer-btn-text">Produktet</span>
         </button>
         <button class="btn-pad">
           <span class="material-symbols-outlined footer-icon">shopping_cart</span>
             <span class="footer-btn-text">Shporta</span>
         </button>
         <button class="btn-pad">
-          <span class="material-symbols-outlined footer-icon">menu</span>
-            <span class="footer-btn-text">Menu</span>
+          <span class="material-symbols-outlined footer-icon">chat</span>
+            <span class="footer-btn-text">Chat</span>
         </button>
       </section>
 
