--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
     <!--  Header  -->
 
     <header>
+      <button><span class="material-symbols-outlined footer-icon btn-pad">notifications</span></button>
       <span>Ne Zbritje!</span>
-      <div style="display: flex;align-items: center;column-gap: 15px;">
-        <button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart
-        </span></button>
-        <button><span class="material-symbols-outlined footer-icon btn-pad">add_circle</span></button>
-      </div>
+      <button><span class="material-symbols-outlined footer-icon btn-pad">add_circle</span></button>
     </header>
 
     <!--   End of Header  -->
