--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="search-container">
           <input type="search" placeholder="Search Here...">
         </div>
-        <button style="background-color: rgb(240, 240, 240);border-radius: 5px;"><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
+        <button style="background-color: var(--color-button);border-radius: 5px;"><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
       </section>
 
       <!--  Profile Store Section  -->
