--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <header>
       <button><span class="material-symbols-outlined footer-icon btn-pad">notifications</span></button>
-      <span>Ne Zbritje!</span>
+      <span style="color: #fff;">Ne Zbritje!</span>
       <button><span class="material-symbols-outlined footer-icon btn-pad">add_circle</span></button>
     </header>
 
