--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <header>
       <button><span class="material-symbols-outlined footer-icon btn-pad">notifications</span></button>
       <span style="color: #fff;">Ne Zbritje!</span>
-      <button><span class="material-symbols-outlined footer-icon btn-pad">add_circle</span></button>
+      <div class="flex-alg-center">
+        <button><span class="material-symbols-outlined footer-icon btn-pad">shopping_cart</span></button>
+        <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad">account_circle</span></button>
+      </div>
     </header>
 
     <!--   End of Header  -->
@@ -115,7 +118,10 @@
 
       <!-- End of Profile Store Section -->
 
-
+      <div class="addProductBtn admin-panel">
+        <span class="material-symbols-outlined">add_circle</span>
+        <button>Add Product</button>
+      </div>
       <!--  Main Product Section  -->
       <section class="main-productGrid">
 
@@ -324,8 +330,7 @@
 
     <!-- End of Main Section  -->
 
-    <!-- Bottom Navigation Section  -->
-      <section class="b-nav-bar">
+    <!-- Bottom Navigation Section  
         <button class="selected btn-pad">
           <span class="material-symbols-outlined footer-icon">home</span>
             <span class="footer-btn-text">Ballina</span>
@@ -340,7 +345,7 @@
         </button>
       </section>
 
-    <!-- End of Bottom Navigation Section  -->
+     End of Bottom Navigation Section  -->
 
   
 
