--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
       <span style="color: #fff;">Ne Zbritje!</span>
       <div class="flex-alg-center">
         <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal4">shopping_cart</span></button>
-        <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad open-modal-btn" data-target="#modal9">account_circle</span></button>
+        <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad" id="toggleButton">account_circle</span></button>
+        <div id="buttonsContainer">
+          <button>Button 1</button>
+          <button>Button 2</button>
+          <button>Button 3</button>
+      </div>
       </div>
     </header>
 
@@ -56,7 +61,8 @@
         <button class="open-modal-btn" style="background-color: var(--color-button);border-radius: 5px;" data-target="#modal8" ><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
       </section>
 
-      <!--  Profile Store Section  -->
+      <!--  Profile Store Section TODO: me ndryshu ne ul-li  -->
+      
       <section class="cat-wrap">
         <div class="cat-container">
           <div class="cat-profile">
@@ -126,26 +132,26 @@
       <section class="main-productGrid">
 
         <div class="product-card">
-        <div class="open-modal-btn" data-target="#modal1">
-          <div class="prod-img-box">
-            <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-            <img class="productImage" src="/images/1.png" alt="Proudct Image">
-            <div class="discount-label">-14%</div>
-            <!-- Admin Edit Button -->
-            <div>
-              <button class="admin-panel deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-              <button class="admin-panel editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
+          <div class="open-modal-btn" data-target="#modal1">
+            <div class="prod-img-box">
+              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
+              <img class="productImage" src="/images/1.png" alt="Proudct Image">
+              <div class="discount-label">-14%</div>
+              <!-- Admin Edit Button -->
+              <div>
+                <button class="admin-panel deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
+                <button class="admin-panel editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
+              </div>
+            </div>
+            <div class="product-info">
+              <p>Deri me 25/05/1989</p>
+              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <div>
+                <span>€3.99</span>
+                <strike>9.20</strike>
+              </div>
             </div>
           </div>
-          <div class="product-info">
-            <p>Deri me 25/05/1989</p>
-            <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-            <div>
-              <span>€3.99</span>
-              <strike>9.20</strike>
-            </div>
-          </div>
-        </div>
           <div class="cart-button">
             <button class="cart-btn">Add to Cart</button>
             <div class="quantity-controls">
@@ -270,7 +276,7 @@
 
 <!-- Filter Modal Styling  -->
 
-<div id="modal8" class="modal modal1">
+<div id="modal8" class="modal modal2">
   <div class="modal-content">
     <h2>Filter Modal</h2>
     <button class="close-modal-btn">Close</button>
@@ -287,9 +293,6 @@
   </div>
 </div>
 <!-- End of Admin Panel Modal Styling  -->
-
-
-
 
 
 
@@ -376,6 +379,23 @@
     <!-- End of  Quantity and Add to cart Button Script -->
 
 
+  <!-- Sendwich Menu Toggle Script -->
+  <script>
+    const buttonsContainer = document.getElementById('buttonsContainer');
+    const toggleButton = document.getElementById('toggleButton');
+
+    toggleButton.addEventListener('click', () => {
+      buttonsContainer.classList.toggle('open');
+    });
+
+    window.addEventListener('scroll', () => {
+      if (buttonsContainer.classList.contains('open')) {
+        buttonsContainer.classList.remove('open');
+      }
+    });
+  </script>
+
+  <!-- End of Sendwich Menu Toggle Script -->
 
 
 
