--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <button><span class="material-symbols-outlined footer-icon btn-pad open-modal-btn" data-target="#modal4">shopping_cart</span></button>
         <button><span class="material-symbols-outlined admin-panel footer-icon btn-pad" id="toggleButton">account_circle</span></button>
         <div id="buttonsContainer">
-          <button>Button 1</button>
-          <button>Button 2</button>
-          <button>Button 3</button>
+          <button>Login or Register</button>
+          <button>Language: English</button>
+          <button>Support</button>
       </div>
       </div>
     </header>
