--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     });
   </script>
 
-    <!-- End of  Quantity and Add to cart Button Script -->
+  <!-- End of  Quantity and Add to cart Button Script -->
 
 
   <!-- Sendwich Menu Toggle Script -->
@@ -406,6 +406,7 @@
 
 
 
+  <!-- Bottom Navigation Button Script -->
 
   <script>
     var buttons = document.querySelectorAll('button');
@@ -419,6 +420,8 @@
       });
     }
   </script>
+
+  <!-- End of Bottom Navigation Button Script -->
 
 
 
