--- a/home.html
+++ b/home.html
@@ -9,16 +9,10 @@
 
 
   <div class="slider-container">
-    <div class="slides">
-      <img src="public/images/1.jpeg" alt="Image 1">
-      <img src="public/images/2.jpeg" alt="Image 2">
-      <img src="public/images/3.jpeg" alt="Image 3">
-    </div>
-    <div class="dots">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
+    <img src="/images/1.jpeg" alt="">
+    <img src="/images/2.jpeg" alt="">
+    <img src="/images/3.jpeg" alt="">
+    <div class="dots-container"></div>
   </div>
 
 
@@ -32,36 +26,103 @@
 
 
 
+
+
   <script>
-    let slideIndex = 0;
-showSlides();
+    document.addEventListener("DOMContentLoaded", function() {
+  const images = document.querySelectorAll('.slider-container img');
+  const dotsContainer = document.querySelector('.dots-container');
+  let currentIndex = 0;
+  const intervalTime = 10000;
 
-function showSlides() {
-  const slides = document.querySelectorAll('.slides img');
-  const dots = document.querySelectorAll('.dot');
+  images[currentIndex].classList.add('active');
 
-  slides.forEach((slide, index) => {
-    slide.style.display = 'none';
-    dots[index].classList.remove('active');
+  images.forEach((image, index) => {
+    const dot = document.createElement('div');
+    dot.classList.add('dot');
+    if (index === currentIndex) {
+      dot.classList.add('active');
+    }
+    dot.addEventListener('click', () => {
+      changeImage(index);
+    });
+    dotsContainer.appendChild(dot);
   });
 
-  slideIndex++;
-  if (slideIndex > slides.length) slideIndex = 1;
+  function changeImage(index) {
+    images[currentIndex].classList.remove('active');
+    dotsContainer.children[currentIndex].classList.remove('active');
+    currentIndex = index;
+    images[currentIndex].classList.add('active');
+    dotsContainer.children[currentIndex].classList.add('active');
+  }
 
-  slides[slideIndex - 1].style.display = 'block';
-  dots[slideIndex - 1].classList.add('active');
+  function nextImage() {
+    let nextIndex = (currentIndex + 1) % images.length;
+    changeImage(nextIndex);
+  }
 
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
-}
+  let sliderInterval = setInterval(nextImage, intervalTime);
 
-function currentSlide(n) {
-  slideIndex = n - 1;
-  showSlides();
-}
+  function resetInterval() {
+    clearInterval(sliderInterval);
+    sliderInterval = setInterval(nextImage, intervalTime);
+  }
+
+  // Swipe functionality
+  let startX;
+
+  function handleTouchStart(event) {
+    startX = event.touches[0].clientX;
+  }
+
+  function handleTouchEnd(event) {
+    if (!startX) return;
+
+    const endX = event.changedTouches[0].clientX;
+    const diffX = startX - endX;
+
+    if (diffX > 50) {
+      nextImage();
+      resetInterval();
+    } else if (diffX < -50) {
+      let prevIndex = (currentIndex - 1 + images.length) % images.length;
+      changeImage(prevIndex);
+      resetInterval();
+    }
+
+    startX = null;
+  }
+
+  function handleMouseDown(event) {
+    startX = event.clientX;
+  }
+
+  function handleMouseUp(event) {
+    if (!startX) return;
+
+    const endX = event.clientX;
+    const diffX = startX - endX;
+
+    if (diffX > 50) {
+      nextImage();
+      resetInterval();
+    } else if (diffX < -50) {
+      let prevIndex = (currentIndex - 1 + images.length) % images.length;
+      changeImage(prevIndex);
+      resetInterval();
+    }
+
+    startX = null;
+  }
+
+  document.querySelector('.slider-container').addEventListener('touchstart', handleTouchStart);
+  document.querySelector('.slider-container').addEventListener('touchend', handleTouchEnd);
+  document.querySelector('.slider-container').addEventListener('mousedown', handleMouseDown);
+  document.querySelector('.slider-container').addEventListener('mouseup', handleMouseUp);
+});
 
   </script>
-
-
 
 
 
