--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
   <div class="slider-container">
     <div class="visitorBtn">
-      <span>Vazhdo si Visitor</span>
+      <button>Vazhdo si Visitor</button>
     </div>
     <img src="/images/1.jpeg" alt="">
     <img src="/images/2.jpeg" alt="">
