--- a/home.html
+++ b/home.html
@@ -15,10 +15,12 @@
 
   <div class="reg-btn-container">
     <div class="dots-container"></div>
-    <button>Regjistrohu</button>
-    <div class="reg-text-log">
-      <span>Nese keni logari ju lutem klikoni ketu</span>
-      <span style="color: red;text-decoration: underline;">Kyqu</span>
+    <div>
+      <button>Regjistrohu</button>
+      <div class="reg-text-log">
+        <span>Nese keni logari ju lutem klikoni ketu</span>
+        <span style="color: red;text-decoration: underline;">Kyqu</span>
+      </div>
     </div>
 
   </div>
